--- a/localization/english/religion/religion_zanadic_l_english.yml
+++ b/localization/english/religion/religion_zanadic_l_english.yml
@@ -10,7 +10,7 @@
  zanadic_cichol_name:0 "Cichol"
  zanadic_cichol_name_possessive:0 "Cichols"
  zanadic_seiros_name:0 "Seiros"
- zanadic_seiros_name:0 "Seiros'"
+ zanadic_seiros_name_possessive:0 "Seiros'"
  zanadic_indech_name:0 "Indech"
  zanadic_indech_name_possessive:0 "Indechs"
  zanadic_macuil_name:0 "Macuil"
