--- a/localization/english/fodlan_namelists_l_english.yml
+++ b/localization/english/fodlan_namelists_l_english.yml
@@ -196,7 +196,7 @@
  Erhardt:0 "Erhardt"
  Jose:0 "Jose"
  Zamon:0 "Zamon"
-  Hapi:0 "Hapi"
+ Hapi:0 "Hapi"
  Hatshe:0 "Hatshe"
  Hemetre:0 "Hemetre"
  Henut:0 "Henut"
@@ -400,7 +400,8 @@
  Mateo:0 "Mateo"
  Miguel:0 "Miguel"
  Miklan:0 "Miklan"
- Nicolaus_Nicholas:0 "Nicolaus_Nicholas"
+ Nicholas:0 "Nicholas"
+ Nicolaus:0 "Nicolaus"
  Regis:0 "Regis"
  Remy:0 "Remy"
  Rowe:0 "Rowe"
@@ -750,7 +751,7 @@
  Mateo:0 "Mateo"
  Miguel:0 "Miguel"
  Miklan:0 "Miklan"
- Nicolaus_Nicholas:0 "Nicolaus_Nicholas"
+ Nicolaus:0 "Nicolaus"
  Regis:0 "Regis"
  Remy:0 "Remy"
  Rowe:0 "Rowe"
