temp almyras and friends

--- a/localization/english/fodlan_religion_l_english.yml
+++ b/localization/english/fodlan_religion_l_english.yml
@@ -41,7 +41,7 @@
 
  buykisik_religion:0 "Buykisik Religion"
  buykisik_religion_desc:0 "The multiple suns of Almyra are dedicated to each of the passions and strengths that Malik himself expressed, those who follow them aim to walk their chosen path towards their chosen sun"
- buykisik_adj:0 "Buykisik"
+ buykisik_religion_adj:0 "Buykisik"
 
  kizilisma:0 "Kizilisma"
  Kizilisma_desc:0 "The Red Sun of Malik's ambition soared throughout the world, those who choose to embrace the flames of his desire to bring unity to all of Almyra and beyond"
