--- a/localization/german/fodlan_religion_l_german.yml
+++ b/localization/german/fodlan_religion_l_german.yml
@@ -41,7 +41,7 @@
 
  buykisik_religion:0 "Buykisikisch Religion"
  buykisik_religion_desc:0 "Die vielen Sonnen von Almyra sind jeder der Leidenschaften und Stärken gewidmet, die Malik selbst zum Ausdruck gebracht hat. Diejenigen, die ihnen folgen, haben das Ziel, den von ihnen gewählten Weg zu ihrer gewählten Sonne zu gehen"
- buykisik_adj:0 "Buykisikisch"
+ buykisik_religion_adj:0 "Buykisikisch"
 
  kizilisma:0 "Kizilisma"
  Kizilisma_desc:0 "Die Rote Sonne von Maliks Ehrgeiz erstrahlte in der ganzen Welt, diejenigen, die sich entschieden, die Flammen seines Wunsches zu umarmen, um ganz Almyra und darüber hinaus Einheit zu bringen"
