Beast hunt event
I can't wait until it doesn't work and I need to revisit this.

--- a/localization/english/fodlan_flavor_l_english.yml
+++ b/localization/english/fodlan_flavor_l_english.yml
@@ -3,6 +3,8 @@
  perfect_teatime_opinion:0 "Perfect Teatime"
  nice_teatime_opinion:0 "Nice Teatime"
  poor_teatime_opinion:0 "Awkward Teatime"
+ beast_victory_modifier:0 "Slew a Demonic Beast"
+ ran_from_beast_modifier:0 "Ran From a Demonic Beast"
  FOD_flavor.1.t:0 "Tomato Shortage"
  FOD_flavor.1.desc:0 "Rumors swirl about the [tomato_county.GetName] about a mysterious dark knight who purchased all of the tomatoes in the markets. Surely there is some feast planned somewhere, but no locals have been invited. The commonfolk plead for culinary aid."
  FOD_flavor.1.a:0 "I suppose I can import tomatoes."
@@ -16,6 +18,21 @@
  FOD_flavor.2.perfect:0 "Perfect Teatime!"
  FOD_flavor.2.nice:0 "Nice Teatime!"
  FOD_flavor.2.poor:0 "You don't have much to say to one another..."
+ FOD_flavor.3.t:0 "Demonic Beast Attack!"
+ FOD_flavor.3.desc:0 "Just as my hunting party crests a hill we hear it. The snapping of twigs, the rustle of branches, birds screaming in fright; they are heralds announcing its arrival. A massive Demonic Beast, heading straight for us."
+ FOD_flavor.3.a:0 "Face this Demonic Beast alone."
+ FOD_flavor.3.a.critical_success:0 "The Demonic Beast is no match for me."
+ FOD_flavor.3.a.success:0 "I am injured while slaying the Demonic Beast."
+ FOD_flavor.3.a.failure:0 "I am injured and the Demonic Beast got away."
+ FOD_flavor.3.b:0 "Ask a champion to face the Demonic Beast."
+ FOD_flavor.3.b.critical_success:0 "The Demonic Beast is no match for [champion.GetName]."
+ FOD_flavor.3.b.success:0 "[champion.GetName] is injured while slaying the Demonic Beast."
+ FOD_flavor.3.b.failure:0 "[champion.GetName] is injured and the Demonic Beast got away."
+ FOD_flavor.3.b.critical_failure:0 "[champion.GetName] is slain by the Demonic Beast."
+ FOD_flavor.3.c:0 "Organize the hunting party to fight together."
+ FOD_flavor.3.c.success:0 "We work together and slay the Demonic Beast."
+ FOD_flavor.3.c.failure:0 "We drive off the Demonic Beast, but some are injured."
+ FOD_flavor.3.d:0 "Run away."
  FOD_flavor.4.t:0 "Sharing a Meal"
  FOD_flavor.4.desc:0 "I have invited [first_courtier.GetName] and [second_courtier.GetName] to share a private meal. The head chef has prepared a special meal, or I could request a meal that they both like."
  FOD_flavor.4.a:0 "Try today's special."
