Eating weeds event
Much simpler than the Beast hunt event.

--- a/localization/english/fodlan_flavor_l_english.yml
+++ b/localization/english/fodlan_flavor_l_english.yml
@@ -5,6 +5,7 @@
  poor_teatime_opinion:0 "Awkward Teatime"
  beast_victory_modifier:0 "Slew a Demonic Beast"
  ran_from_beast_modifier:0 "Ran From a Demonic Beast"
+ careful_diet_modifier:0 "Careful Diet"
  FOD_flavor.1.t:0 "Tomato Shortage"
  FOD_flavor.1.desc:0 "Rumors swirl about the [tomato_county.GetName] about a mysterious dark knight who purchased all of the tomatoes in the markets. Surely there is some feast planned somewhere, but no locals have been invited. The commonfolk plead for culinary aid."
  FOD_flavor.1.a:0 "I suppose I can import tomatoes."
@@ -24,6 +25,7 @@
  FOD_flavor.3.a.critical_success:0 "The Demonic Beast is no match for me."
  FOD_flavor.3.a.success:0 "I am injured while slaying the Demonic Beast."
  FOD_flavor.3.a.failure:0 "I am injured and the Demonic Beast got away."
+ FOD_flavor.3.a.critical_failure:0 "I am slain by the Demonic Beast."
  FOD_flavor.3.b:0 "Ask a champion to face the Demonic Beast."
  FOD_flavor.3.b.critical_success:0 "The Demonic Beast is no match for [champion.GetName]."
  FOD_flavor.3.b.success:0 "[champion.GetName] is injured while slaying the Demonic Beast."
@@ -38,3 +40,7 @@
  FOD_flavor.4.a:0 "Try today's special."
  FOD_flavor.4.b:0 "Request something that everybody likes."
  FOD_flavor.4.good:0 "Bonds among the three of you grew stronger."
+ FOD_flavor.5.t:0 "An Edible Plant?"
+ FOD_flavor.5.desc:0 "I have found an unusual plant growing in the garden that I believe to be edible. When I told [naysayer.GetName] of my intention to eat it to test my theory, [naysayer.GetSheHe] advised me to be more careful in my diet, for the sake of the realm."
+ FOD_flavor.5.a:0 "Eat it."
+ FOD_flavor.5.b:0 "Listen to [naysayer.GetHerHis] advice."
